[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skans"
version = "0.1.0"
description = "Quantitative finance library for risk and valuation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
]
authors = [
    { name = "Frik Strydom" },
]

[tool.setuptools.packages.find]
where = ["src"]
